# HabitTrackerTelegramBot

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  structure.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: e004bc6b6b6f_init_models.py
docker/: Dockerfile
docker/api/: Dockerfile  entrypoint.sh
docker/bot/: Dockerfile  entrypoint.sh
migrations/: env.py
migrations/versions/: 140a41330e84_add_indexes_for_scheduler_optimization.py  5f0303943040_init_models.py  b569383503af_init_models.py
monitoring/: loki-config.yaml  prometheus.yml  promtail-config.yaml
src/api/: main.py
src/api/core/: config.py  database.py  dependencies.py  exceptions.py  logging.py  security.py
src/api/models/: __init__.py  base.py  habit.py  habit_execution.py  user.py
src/api/repositories/: __init__.py  base_repository.py  habit_execution_repository.py  habit_repository.py  user_repository.py
src/api/routes/: __init__.py  auth.py  habit_executions.py  habits.py  users.py
src/api/schemas/: __init__.py  auth_schema.py  base_schema.py  habit_execution_schema.py  habit_schema.py  user_schema.py
src/api/services/: __init__.py  base_service.py  habit_execution_service.py  habit_service.py  user_service.py
src/api/utils/: __init__.py  date_utils.py
src/bot/: main.py
src/bot/core/: config.py  enums.py
src/bot/handlers/: commands.py  common.py  habits.py  profile.py
src/bot/keyboards/: callbacks.py  inline.py  reply.py
src/bot/services/: api_client.py
src/bot/states/: habit_states.py  profile_states.py
src/core_shared/: config.py  logging_setup.py  sentry_sdk_setup.py
src/scheduler/: config.py  main.py  tasks.py
src/tests/: conftest.py
src/worker/: celery_app.py  tasks.py
tests/: conftest.py
tests/api/: conftest.py  test_executions.py  test_habits.py  test_healthcheck.py  test_scheduler_repository.py
