# =================================================================
# Poetry
# =================================================================

[project]
name = "habittrackertelegrambot"
version = "0.1.0"
description = ""
authors = [
    {name = "Nick",email = "nicksok2413@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi[standard] (>=0.121.1,<0.122.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "sentry-sdk[fastapi,sqlalchemy] (>=2.44.0,<3.0.0)",
    "alembic (>=1.17.1,<2.0.0)",
    "psycopg[binary] (>=3.2.12,<4.0.0)"
]

[dependency-groups]
dev = [
    "pre-commit (>=4.4.0,<5.0.0)",
    "ruff (>=0.14.4,<0.15.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "pytest (>=9.0.1,<10.0.0)",
    "pytest-docker (>=3.2.5,<4.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


# =================================================================
# Конфигурация Mypy
# =================================================================
[tool.mypy]
python_version = "3.12"

# Включаем строгие проверки

# Проверяет тела функций, даже если у них нет аннотаций типов
check_untyped_defs = true  # Помогает найти ошибки в старом коде, который еще не был полностью типизирован

# Запрещает создавать новые функции без полных аннотаций типов для аргументов и возвращаемого значения
disallow_untyped_defs = true  # Обеспечивает полное покрытие типов для нового кода

# Предупреждает, если функция с указанным типом возвращает значение типа `Any`
warn_return_any = true  # Помогает предотвратить "утечку" неопределенных типов в строго типизированный код

# Предупреждает о наличии ненужных комментариев `# type: ignore`
warn_unused_ignores = true  # Помогает поддерживать чистоту кода, удаляя "заглушки", которые больше не актуальны

# Игнорировать библиотеки, у которых нет "стабов" (файлов с типами)
ignore_missing_imports = true

# Директории для исключения из проверки
exclude = ["migrations/", "tests/"]

# =================================================================
# Конфигурация Ruff
# =================================================================
[tool.ruff]
# Устанавливаем максимальную длину строки
line-length = 120

# Указываем директории, которые Ruff должен игнорировать
exclude = [
    ".git",
    ".idea",
    ".venv",
    "venv",
    "*/migrations/*",
    "*/tests/*",
]

# Настраиваем линтер
[tool.ruff.lint]
# Выбираем наборы правил. 'E' и 'F' - это стандарт (pycodestyle, pyflakes)
# 'I' - для сортировки импортов (isort)
select = ["E", "F", "W", "I"]

# Игнорируем конкретные правила, если они мешают
ignore = ["E501"]  # E501 (line too long) можно отключить