# =================================================================
# Конфигурация проекта и Poetry
# =================================================================
[project]
name = "HabitTrackerTelegramBot"
version = "0.1.0"
description = ""
authors = [
    {name = "Nick",email = "nicksok2413@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"

dependencies = [
    "fastapi[standard] (>=0.121.1,<0.122.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "sentry-sdk[fastapi,sqlalchemy] (>=2.44.0,<3.0.0)",
    "alembic (>=1.17.2,<2.0.0)",
    "psycopg[binary] (>=3.2.12,<4.0.0)",
    "starlette-exporter (>=0.23.0,<0.24.0)"
]

[dependency-groups]
dev = [
    "pre-commit (>=4.4.0,<5.0.0)",
    "ruff (>=0.14.5,<0.15.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "pytest (>=9.0.1,<10.0.0)",
    "pytest-docker (>=3.2.5,<4.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false


# =================================================================
# Конфигурация Alembic
# =================================================================
[tool.alembic]
# Путь к директории с миграциями
script_location = "alembic"

# Определяем хуки, которые запускаются после создания нового файла миграции
[[tool.alembic.post_write_hooks]]
# Название хука
name = "ruff"
# Тип 'exec' означает запуск внешней команды
type = "exec"
# Команда для запуска
executable = "poetry"
# Аргументы для команды (REVISION_SCRIPT_FILENAME - специальная переменная Alembic)
options = "run ruff format REVISION_SCRIPT_FILENAME"


# =================================================================
# Конфигурация Mypy
# =================================================================
[tool.mypy]
python_version = "3.12"

# Включаем строгие проверки

# Проверяет тела функций, даже если у них нет аннотаций типов
check_untyped_defs = true  # Помогает найти ошибки в старом коде, который еще не был полностью типизирован

# Запрещает создавать новые функции без полных аннотаций типов для аргументов и возвращаемого значения
disallow_untyped_defs = true  # Обеспечивает полное покрытие типов для нового кода

# Предупреждает, если функция с указанным типом возвращает значение типа `Any`
warn_return_any = true  # Помогает предотвратить "утечку" неопределенных типов в строго типизированный код

# Предупреждает о наличии ненужных комментариев `# type: ignore`
warn_unused_ignores = true  # Помогает поддерживать чистоту кода, удаляя "заглушки", которые больше не актуальны

# Игнорировать библиотеки, у которых нет "стабов" (файлов с типами)
ignore_missing_imports = true

# Директории для исключения из проверки

exclude = [
    "alembic/",
    "tests/",
    "docker/"
]
# Включаем явное определение баз пакетов (помогает с namespace packages)
explicit_package_bases = true

# =================================================================
# Конфигурация Ruff
# =================================================================
[tool.ruff]
# Устанавливаем максимальную длину строки
line-length = 120

# Указываем директории, которые линтер и форматтер должены игнорировать
exclude = [
    ".git",
    ".idea",
    ".venv",
    "venv",
    ".ruff_cache",
    ".mypy_cache",
    ".pytest_cache",
    "__pycache__",
]

# Настраиваем линтер
[tool.ruff.lint]
# Наборы правил:
select = [
    "E",   # pycodestyle errors (стандартные ошибки стиля)
    "F",   # Pyflakes (логические ошибки, неиспользуемые импорты)
    "W",   # pycodestyle warnings (предупреждения стиля)
    "I",   # isort (сортировка и группировка импортов)
    "B",   # flake8-bugbear (поиск вероятных багов и архитектурных ошибок)
    "S",   # flake8-bandit (поиск проблем безопасности: пароли в коде, слабые шифры)
]

# Игнорируем конкретные правила, если они мешают
ignore = [
    "E501",  # Line too long. Длину строк контролирует форматтер.
             # Линтер не должен ругаться, если строку невозможно разбить (например, длинный URL).
]

# Указываем дополнительные директории, которые линтер должен игнорировать
exclude = [
    "alembic/versions/*",  # Автосгенерированные миграции не трогаем
]

# Настройка исключений правил для конкретных файлов
[tool.ruff.lint.per-file-ignores]
# В тестах действуют другие правила безопасности и стиля
"tests/**/*.py" = [
    "S101",  # Разрешаем использование `assert`. В продакшене это опасно, в тестах — необходимо
    "S311",  # Разрешаем стандартные генераторы случайных чисел (random), криптостойкость тут не нужна
]

# Файлы __init__.py
"__init__.py" = [
    "F401",  # Разрешаем импортировать модуль, но не использовать его явно в этом файле
]

# =================================================================
# Конфигурация Pytest
# =================================================================
[tool.pytest.ini_options]
# Добавляем src в путь поиска модулей, чтобы тесты видели 'src.api...'
pythonpath = ["src"]

# Настройки для pytest-asyncio

# auto - автоматически помечает async функции как тесты
asyncio_mode = "auto"

# Указываем, где искать фикстуру event_loop (scope session)
asyncio_default_fixture_loop_scope = "session"

# Игнорируем предупреждения о deprecation (опционально, чтобы вывод был чище)
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]